@@ -28,50 +28,55 @@ namespace mfem
 
 using namespace std;
 
-#ifdef MFEM_USE_CUDA
+#ifdef CUDA_or_HIP
 int SparseMatrix::SparseMatrixCount = 0;
-cusparseHandle_t SparseMatrix::handle = nullptr;
+cu_or_hip(sparseHandle_t) SparseMatrix::handle = nullptr;
 size_t SparseMatrix::bufferSize = 0;
 void * SparseMatrix::dBuffer = nullptr;
+# if defined(MFEM_USE_CUDA)
 #  if CUSPARSE_VERSION >=  11400
-#    define MFEM_CUSPARSE_ALG CUSPARSE_SPMV_CSR_ALG1
+#    define MFEM_GPUSPARSE_ALG CUSPARSE_SPMV_CSR_ALG1
 #  else
-#    define MFEM_CUSPARSE_ALG CUSPARSE_CSRMV_ALG1
+#    define MFEM_GPUSPARSE_ALG CUSPARSE_CSRMV_ALG1
 #  endif // CUSPARSE_VERSION >= 11400
-#endif // MFEM_USE_CUDA
+# elif defined(MFEM_USE_HIP)
+// https://hipsparse.readthedocs.io/en/latest/usermanual.html#hipsparsespmvalg-t
+#  define MFEM_GPUSPARSE_ALG HIPSPARSE_CSRMV_ALG1
+# endif
+#endif // CUDA_or_HIP
 
-void SparseMatrix::InitCuSparse()
+void SparseMatrix::InitGPUSparse()
 {
    // Initialize cuSPARSE library
-#ifdef MFEM_USE_CUDA
-   if (Device::Allows(Backend::CUDA_MASK))
+#ifdef CUDA_or_HIP
+   if (Device::Allows(Backend::CUDA_MASK) || Device::Allows(Backend::HIP_MASK))
    {
-      if (!handle) { cusparseCreate(&handle); }
-      useCuSparse=true;
+      if (!handle) { cu_or_hip(sparseCreate)(&handle); }
+      useGPUSparse=true;
       SparseMatrixCount++;
    }
    else
    {
-      useCuSparse=false;
+      useGPUSparse=false;
    }
 #endif
 }
 
-void SparseMatrix::ClearCuSparse()
+void SparseMatrix::ClearGPUSparse()
 {
-#ifdef MFEM_USE_CUDA
+#ifdef CUDA_or_HIP
    if (initBuffers)
    {
-#if CUDA_VERSION >= 10010
-      cusparseDestroySpMat(matA_descr);
-      cusparseDestroyDnVec(vecX_descr);
-      cusparseDestroyDnVec(vecY_descr);
+#if CUDA_VERSION >= 10010 || defined(MFEM_USE_HIP)
+      cu_or_hip(sparseDestroySpMat)(matA_descr);
+      cu_or_hip(sparseDestroyDnVec)(vecX_descr);
+      cu_or_hip(sparseDestroyDnVec)(vecY_descr);
 #else
       cusparseDestroyMatDescr(matA_descr);
-#endif
+#endif // CUDA_VERSION >= 10010 || defined(MFEM_USE_HIP)
       initBuffers = false;
    }
-#endif
+#endif // CUDA_or_HIP
 }
 
 SparseMatrix::SparseMatrix(int nrows, int ncols)
@@ -97,7 +102,7 @@ SparseMatrix::SparseMatrix(int nrows, int ncols)
    NodesMem = new RowNodeAlloc;
 #endif
 
-   InitCuSparse();
+   InitGPUSparse();
 }
 
 SparseMatrix::SparseMatrix(int *i, int *j, double *data, int m, int n)
@@ -116,7 +121,7 @@ SparseMatrix::SparseMatrix(int *i, int *j, double *data, int m, int n)
    NodesMem = NULL;
 #endif
 
-   InitCuSparse();
+   InitGPUSparse();
 }
 
 SparseMatrix::SparseMatrix(int *i, int *j, double *data, int m, int n,
@@ -149,7 +154,7 @@ SparseMatrix::SparseMatrix(int *i, int *j, double *data, int m, int n,
       }
    }
 
-   InitCuSparse();
+   InitGPUSparse();
 }
 
 SparseMatrix::SparseMatrix(int nrows, int ncols, int rowsize)
@@ -172,7 +177,7 @@ SparseMatrix::SparseMatrix(int nrows, int ncols, int rowsize)
       I[i] = i * rowsize;
    }
 
-   InitCuSparse();
+   InitGPUSparse();
 }
 
 SparseMatrix::SparseMatrix(const SparseMatrix &mat, bool copy_graph,
@@ -240,7 +245,7 @@ SparseMatrix::SparseMatrix(const SparseMatrix &mat, bool copy_graph,
    At = NULL;
    isSorted = mat.isSorted;
 
-   InitCuSparse();
+   InitGPUSparse();
 }
 
 SparseMatrix::SparseMatrix(const Vector &v)
@@ -269,7 +274,7 @@ SparseMatrix::SparseMatrix(const Vector &v)
       A[r] = v[r];
    }
 
-   InitCuSparse();
+   InitGPUSparse();
 }
 
 SparseMatrix& SparseMatrix::operator=(const SparseMatrix &rhs)
@@ -310,7 +315,7 @@ void SparseMatrix::SetEmpty()
 #endif
    isSorted = false;
 
-   ClearCuSparse();
+   ClearGPUSparse();
 }
 
 int SparseMatrix::RowSize(const int i) const
@@ -660,65 +665,70 @@ void SparseMatrix::AddMult(const Vector &x, Vector &y, const double a) const
 
    // Skip if matrix has no non-zeros
    if (nnz == 0) {return;}
-   if (Device::Allows(Backend::CUDA_MASK) && useCuSparse)
+   if ((Device::Allows(Backend::CUDA_MASK) || Device::Allows(Backend::HIP_MASK)) &&
+       useGPUSparse)
    {
-#ifdef MFEM_USE_CUDA
+#ifdef CUDA_or_HIP
       const double alpha = a;
       const double beta  = 1.0;
 
       // Setup descriptors
       if (!initBuffers)
       {
-#if CUDA_VERSION >= 10010
+#if CUDA_VERSION >= 10010 || defined(MFEM_USE_HIP)
          // Setup matrix descriptor
-         cusparseCreateCsr(&matA_descr,Height(), Width(), J.Capacity(),
-                           const_cast<int *>(d_I),
-                           const_cast<int *>(d_J), const_cast<double *>(d_A), CUSPARSE_INDEX_32I,
-                           CUSPARSE_INDEX_32I, CUSPARSE_INDEX_BASE_ZERO, CUDA_R_64F);
+         cu_or_hip(sparseCreateCsr)(&matA_descr,Height(), Width(), J.Capacity(),
+                                    const_cast<int *>(d_I),
+                                    const_cast<int *>(d_J), const_cast<double *>(d_A), CU_or_HIP(SPARSE_INDEX_32I),
+                                    CU_or_HIP(SPARSE_INDEX_32I), CU_or_HIP(SPARSE_INDEX_BASE_ZERO),
+                                    CUDA_or_HIP(_R_64F));
 
          // Create handles for input/output vectors
-         cusparseCreateDnVec(&vecX_descr, x.Size(), const_cast<double *>(d_x),
-                             CUDA_R_64F);
-         cusparseCreateDnVec(&vecY_descr, y.Size(), d_y, CUDA_R_64F);
+         cu_or_hip(sparseCreateDnVec)(&vecX_descr, x.Size(), const_cast<double *>(d_x),
+                                      CUDA_or_HIP(_R_64F));
+         cu_or_hip(sparseCreateDnVec)(&vecY_descr, y.Size(), d_y, CUDA_or_HIP(_R_64F));
 #else
          cusparseCreateMatDescr(&matA_descr);
          cusparseSetMatIndexBase(matA_descr, CUSPARSE_INDEX_BASE_ZERO);
          cusparseSetMatType(matA_descr, CUSPARSE_MATRIX_TYPE_GENERAL);
-#endif
+#endif // CUDA_VERSION >= 10010 || defined(MFEM_USE_HIP)
          initBuffers = true;
       }
       // Allocate kernel space. Buffer is shared between different sparsemats
       size_t newBufferSize = 0;
 
-      cusparseSpMV_bufferSize(handle, CUSPARSE_OPERATION_NON_TRANSPOSE, &alpha,
-                              matA_descr,
-                              vecX_descr, &beta, vecY_descr, CUDA_R_64F,
-                              MFEM_CUSPARSE_ALG, &newBufferSize);
+      cu_or_hip(sparseSpMV_bufferSize)(handle,
+                                       CU_or_HIP(SPARSE_OPERATION_NON_TRANSPOSE), &alpha,
+                                       matA_descr,
+                                       vecX_descr, &beta, vecY_descr, CUDA_or_HIP(_R_64F),
+                                       MFEM_GPUSPARSE_ALG, &newBufferSize);
 
       // Check if we need to resize
       if (newBufferSize > bufferSize)
       {
          bufferSize = newBufferSize;
-         if (dBuffer != nullptr) { CuMemFree(dBuffer); }
-         CuMemAlloc(&dBuffer, bufferSize);
+         if (dBuffer != nullptr) { Cu_or_Hip(MemFree)(dBuffer); }
+         Cu_or_Hip(MemAlloc)(&dBuffer, bufferSize);
       }
 
-#if CUDA_VERSION >= 10010
+#if CUDA_VERSION >= 10010 || defined(MFEM_USE_HIP)
       // Update input/output vectors
-      cusparseDnVecSetValues(vecX_descr, const_cast<double *>(d_x));
-      cusparseDnVecSetValues(vecY_descr, d_y);
+      cu_or_hip(sparseDnVecSetValues)(vecX_descr, const_cast<double *>(d_x));
+      cu_or_hip(sparseDnVecSetValues)(vecY_descr, d_y);
 
       // Y = alpha A * X + beta * Y
-      cusparseSpMV(handle, CUSPARSE_OPERATION_NON_TRANSPOSE, &alpha, matA_descr,
-                   vecX_descr, &beta, vecY_descr, CUDA_R_64F, MFEM_CUSPARSE_ALG, dBuffer);
+      cu_or_hip(sparseSpMV)(handle, CU_or_HIP(SPARSE_OPERATION_NON_TRANSPOSE), &alpha,
+                            matA_descr,
+                            vecX_descr, &beta, vecY_descr, CUDA_or_HIP(_R_64F), MFEM_GPUSPARSE_ALG,
+                            dBuffer);
 #else
       cusparseDcsrmv(handle, CUSPARSE_OPERATION_NON_TRANSPOSE,
                      Height(), Width(), J.Capacity(),
                      &alpha, matA_descr,
                      const_cast<double *>(d_A), const_cast<int *>(d_I), const_cast<int *>(d_J),
                      const_cast<double *>(d_x), &beta, d_y);
-#endif // CUDA_VERSION >= 10010
-#endif // MFEM_USE_CUDA
+#endif // CUDA_VERSION >= 10010 || defined(MFEM_USE_HIP)
+#endif // CUDA_or_HIP
    }
    else
    {
@@ -736,7 +746,7 @@ void SparseMatrix::AddMult(const Vector &x, Vector &y, const double a) const
 
    }
 
-#else
+#else // MFEM_USE_LEGACY_OPENMP
    const double *Ap = A, *xp = x.GetData();
    double *yp = y.GetData();
    const int *Jp = J, *Ip = I;
@@ -752,7 +762,7 @@ void SparseMatrix::AddMult(const Vector &x, Vector &y, const double a) const
       }
       yp[i] += a * d;
    }
-#endif
+#endif // MFEM_USE_LEGACY_OPENMP
 }
 
 void SparseMatrix::MultTranspose(const Vector &x, Vector &y) const
@@ -3259,7 +3269,7 @@ void SparseMatrix::Destroy()
 #endif
    delete At;
 
-   ClearCuSparse();
+   ClearGPUSparse();
 }
 
 int SparseMatrix::ActualWidth() const
