@@ -10,6 +10,8 @@
 
 Version 4.3.1 (development)
 ===========================
+- Add hipSPARSE support for sparse mat-vec multiplications.
+
 - More explicit and consistent formating of the output of iterative solvers
   with the new IterativeSolver::PrintLevel options. See linalg/solvers.hpp.
 
